--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,7 +69,7 @@
     <!--</form>-->
   </mdb-navbar>
   <!-- Main -->
-  <div class="view">
+  <div class="view" *ngIf="isHomePage">
     <div class="full-bg-img">
       <div class="mask flex-center rgba-blue-strong">
         <div class="container">
