Preparing for AWS Deploy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
           <div class="col-9"><!--  mt-md-0 mt-3 -->
             <div id="logo" class="">
               <h5 class="h5-responsive">Politechnika Rzeszowska im. Ignacego Łukasiewicza</h5>
-              <h1 class="h1-responsive">Technologie internetowe</h1>
+              <h1 class="h1-responsive">Technologie Internetowe</h1>
               <h4 class="h4-responsive">Studia podyplomowe</h4>
 
             </div>
@@ -96,7 +96,7 @@
 
 
 <!-- Footer -->
-<footer class="page-footer font-small blue pt-4">
+  <footer class="page-footer font-small blue pt-5">
 
   <!--<div class="container text-center text-md-left">-->
     <!--<div class="row">-->
@@ -105,10 +105,80 @@
   <!--</div>-->
 
   <!-- Footer Links -->
-  <div class="container text-center text-md-left">
+  <div id="footer-menu" class="container text-center text-md-left">
 
     <!-- Grid row -->
     <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3 footer-menu">
+
+        <h5 class="text-uppercase">O studiach</h5>
+
+        <ul class="">
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Link 1</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Link 2</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Link 3</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Link 4</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Link 5</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Link 6</a>
+          </li>
+
+        </ul>
+
+
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3 footer-menu" id="footer-middle">
+
+        <h5 class="text-uppercase">Menu</h5>
+
+        <ul class="">
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link" routerLink="/home">Strona główna <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">O studiach</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Organizacja</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Plan studiów</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Programy</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Rekrutacja</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">FAQ</a>
+          </li>
+          <li class="nav-item waves-light" mdbWavesEffect>
+            <a class="nav-link">Kontakt</a>
+          </li>
+        </ul>
+
+
+      </div>
+      <!-- Grid column -->
 
       <!-- Grid column -->
       <div class="col-md-6 mt-md-0 mt-3">
@@ -121,65 +191,18 @@
           <a href="https://weii.prz.edu.pl/" target="_blank"><img src="/assets/weii.png" alt="WEII" /></a>
         </div>
 
-        <p>Dziekanat Wydziału<br/>
-          Elektrotechniki i Informatyki<br/>
-          Budynek A, pok. 104<br/><br/>
-          Tel. +48 17 865 12 89<br/>
-          Fax. +48 17 854 20 88<br/>
-          E-mail: <a href="mailto:dwe@prz.edu.pl">dwe@prz.edu.pl</a></p>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none pb-3">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
-
-
-
-        <!-- Links -->
-        <!--<h5 class="text-uppercase">Links</h5>-->
-        <!--<ul class="list-unstyled">-->
-          <!--<li>-->
-            <!--<a href="#!">Link 1</a>-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<a href="#!">Link 2</a>-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<a href="#!">Link 3</a>-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<a href="#!">Link 4</a>-->
-          <!--</li>-->
-        <!--</ul>-->
-
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
-
-        <!-- Links -->
-        <!--<h5 class="text-uppercase">Links</h5>-->
-        <!--<ul class="list-unstyled">-->
-          <!--<li>-->
-            <!--<a href="#!">Link 1</a>-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<a href="#!">Link 2</a>-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<a href="#!">Link 3</a>-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<a href="#!">Link 4</a>-->
-          <!--</li>-->
-        <!--</ul>-->
-
-
+        <div class="row">
+          <div class="col">
+            <p>Dziekanat Wydziału<br/>
+              Elektrotechniki i Informatyki<br/>
+              Budynek A, pok. 104</p>
+          </div>
+          <div class="col">
+            <p>Tel. +48 17 865 12 89<br/>
+              Fax. +48 17 854 20 88<br/>
+              E-mail: <a href="mailto:dwe@prz.edu.pl">dwe@prz.edu.pl</a></p>
+          </div>
+        </div>
 
       </div>
       <!-- Grid column -->
