--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-8 text-left">
 
       <!--Grid row-->
-      <div class="row pb-4">
+      <div class="row pb-4 feature">
         <div class="col-1 col-lg-1">
           <i class="fa fa-bank indigo-text fa-lg"></i>
         </div>
@@ -40,7 +40,7 @@
       <!--Grid row-->
 
       <!--Grid row-->
-      <div class="row pb-4">
+      <div class="row pb-4 feature">
         <div class="col-1 col-lg-1">
           <i class="fa fa-money purple-text fa-lg"></i>
         </div>
@@ -68,7 +68,7 @@
       </div>
 
       <!--Grid row-->
-      <div class="row pb-4">
+      <div class="row pb-4 feature">
         <div class="col-1 col-lg-1">
           <i class="fa fa-desktop deep-purple-text fa-lg"></i>
         </div>
@@ -243,7 +243,7 @@
           <div class="card-item">
 
             <div class="view overlay zoom rounded z-depth-1 waves-light" mdbWavesEffect>
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/18.jpg" class="img-fluid"
+              <img src="/assets/home_tech/1.jpg" class="img-fluid"
                    alt="Sample project image">
               <a>
                 <div class="mask rgba-blue-strong flex-center">
@@ -256,6 +256,11 @@
               <h4>
                 <strong>Programowanie obiektowe</strong>
               </h4>
+              <div class="dev-icon-list">
+                <i class="devicon-c-plain"></i>
+                <i class="devicon-cplusplus-plain"></i>
+                <i class="devicon-csharp-plain"></i>
+              </div>
               <p class="grey-text">Zasady programowania obiektowego, klasy i obiekty. Dziedziczenie i polimorfizm.
                 Wykorzystanie dynamicznej alokacji pamięci. Zintegrowane środowiska programowe języka C++. Proces
                 programowania. Wybór optymalnego rozmiaru modelu programu. Niezawodność oprogramowania.
@@ -275,7 +280,7 @@
           <div class="card-item">
             <!--Featured image-->
             <div class="view overlay rounded z-depth-1  waves-light" mdbWavesEffect>
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/10.jpg" class="img-fluid"
+              <img src="/assets/home_tech/2.jpg" class="img-fluid"
                    alt="Sample project image">
               <a>
                 <div class="mask rgba-blue-strong flex-center">
@@ -289,6 +294,12 @@
               <h4>
                 <strong>Technologie sieci Web</strong>
               </h4>
+              <div class="dev-icon-list">
+                <i class="devicon-html5-plain"></i>
+                <i class="devicon-css3-plain"></i>
+                <i class="devicon-javascript-plain"></i>
+                <i class="devicon-php-plain"></i>
+              </div>
               <p class="grey-text">Projektowanie witryn responsywnych (RWD), język HTML5 z CSS3. Język JavaScript,
                 obiektowy model dokumentu (DOM) języków HTML i XML. Technologia AJAX. Język PHP, OOP, aplikacje MVC.
                 Aplikacje SPA i PWA. Web Services (WS), SOAP WS, RESTful WS. Semantic Web, metadane, ontologie, logika,
@@ -309,7 +320,7 @@
           <div class="card-item">
             <!--Featured image-->
             <div class="view overlay rounded z-depth-1  waves-light" mdbWavesEffect>
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/19.jpg" class="img-fluid"
+              <img src="/assets/home_tech/3.jpg" class="img-fluid"
                    alt="Sample project image">
               <a>
                 <div class="mask rgba-blue-strong flex-center">
@@ -323,6 +334,9 @@
               <h4>
                 <strong>Programowanie w języku Java</strong>
               </h4>
+              <div class="dev-icon-list">
+                <i class="devicon-java-plain"></i>
+              </div>
               <p class="grey-text">Platformy Java SE, EE, ME. Programowanie aplikacji z GUI (AWT, Swing, JavaFX).
                 Programowanie serwletów, obsługa baz danych (JDBC, JPA), przetwarzanie dokumentów JSON i XML (SAX, Stax,
                 DOM), JAXB. Technologia JavaBeans, EJB, JSF. Java ME (biblioteka LWUIT). Programowanie urządzeń
@@ -348,7 +362,7 @@
 
           <div class="card-item">
             <div class="view overlay rounded z-depth-1 waves-light" mdbWavesEffect>
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/4.jpg" class="img-fluid"
+              <img src="/assets/home_tech/4.jpg" class="img-fluid"
                    alt="Sample project image">
               <a>
                 <div class="mask rgba-blue-strong flex-center">
@@ -361,6 +375,11 @@
               <h4>
                 <strong>Bazy danych</strong>
               </h4>
+              <div class="dev-icon-list">
+                <i class="devicon-mysql-plain"></i>
+                <i class="devicon-mongodb-plain"></i>
+                <i class="devicon-postgresql-plain"></i>
+              </div>
               <p class="grey-text">Pojęcie i struktura relacji, algebra relacji. Języki baz danych. Metodyka
                 projektowania relacyjnej bazy danych. Budowa modeli konceptualnych za pomocą diagramów związków encji
                 (ERD). Normalizacja modeli. Notacja UML dla modeli danych. Obiektowo-relacyjne i obiektowe bazy danych.
@@ -377,7 +396,7 @@
 
           <div class="card-item">
             <div class="view overlay rounded z-depth-1 waves-light" mdbWavesEffect>
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/15.jpg" class="img-fluid"
+              <img src="/assets/home_tech/5.jpg" class="img-fluid"
                    alt="Sample project image">
               <a>
                 <div class="mask rgba-blue-strong flex-center">
@@ -390,6 +409,9 @@
               <h4>
                 <strong>Sieci komputerowe</strong>
               </h4>
+              <div class="dev-icon-list">
+                <i class="devicon-sourcetree-plain"></i>
+              </div>
               <p class="grey-text">Podstawy transmisji, topologie sieci, podstawowe parametry, adresacja. Model
                 warstwowy ISO/OSI i TCP/IP. Sieci WLAN. Protokoły drzewa rozpinającego. Protokoły routingu. Media
                 transmisyjne w sieciach komputerowych. Podstawy routingu. Projektowanie sieci komputerowych. Zarządzanie
@@ -406,7 +428,7 @@
 
           <div class="card-item">
             <div class="view overlay rounded z-depth-1 waves-light" mdbWavesEffect>
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/12.jpg" class="img-fluid"
+              <img src="/assets/home_tech/6.jpg" class="img-fluid"
                    alt="Sample project image">
               <a>
                 <div class="mask rgba-blue-strong flex-center">
@@ -419,6 +441,11 @@
               <h4>
                 <strong>Przedmioty obieralne</strong>
               </h4>
+              <div class="dev-icon-list">
+                <i class="devicon-photoshop-plain"></i>
+                <i class="devicon-illustrator-plain"></i>
+
+              </div>
               <p class="grey-text">W ramach studiów podyplomowych "Technologie Internetowe" studenci w zależności od
                 swoich preferencji mogą wybrać jeden z czterech przedmiotów obieralnych:
                 Grafika komputerowa, Programowanie systemów ekspertowych, Sztuczna inteligencja, Technologie
