--- a/src/app/sites/home/home.component.scss
+++ b/src/app/sites/home/home.component.scss
@@ -11,3 +11,14 @@ mdb-card-body p {
 .testimonial-card .avatar {
   margin: 15px 0 0 0;
 }
+.dev-icon-list {
+  margin: 5px 0;
+}
+.dev-icon-list i {
+  color: #2196f3;
+  font-size: 2em;
+  padding: 0 4px;
+}
+.feature {
+  //padding-bottom: 5rem !important;
+}
