--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,51 @@
+.view {
+  background: url("/assets/prz_bg75.jpg") no-repeat;
+  background-color: rgba(33, 150, 243, 0.3);
+  background-size: 115%;
+  height: 50vh;
+}
+
+
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575px) {
   #header-container {
     width: 100%;
   }
+  .view {
+    background-position: 0 0;
+    background-size: cover;
+  }
 }
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) and (max-width: 767px) {
+@media (min-width: 576px) {
   #header-container {
     width: 540px;
+  }
+  .view {
+    background-position: 0 0;
+    background-size: 115%;
   }
 }
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) {
   #header-container {
     width: 720px;
   }
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 992px) {
   #header-container {
     width: 930px;
+  }
+  .view {
+    background-position: 0vh -35vh;
+    -webkit-animation-name: MOVE-BG;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-timing-function: ease;
+    -webkit-animation-iteration-count: initial;
   }
 }
 
@@ -31,37 +54,19 @@
   #header-container {
     width: 1110px;
   }
+
 }
 
 @-webkit-keyframes MOVE-BG {
   from {
-    //-webkit-transform: translateX(0);
-    //background-position: -50px -300px;
-    //background-size: 100%;
-    background-position: -100px -100px;
-    //background-color: rgba(33, 150, 243, 0.7);
-    //background-position: 0px 0px;
+    background-position: 3vh -5vh;
   }
   to {
-    //-webkit-transform: translateX(-187%);
-    //background-position: 0px 0px;
-    //background-size: 115%;
-    //background-position: 0px -250px;
-    background-position: -250px -300px;
-    //background-color: rgba(33, 150, 243, 0.3);
+    background-position: 0vh -35vh;
   }
 }
 
-.view {
-  background: url("/assets/prz_bg75.jpg")no-repeat -250px -300px;
-  background-color: rgba(33, 150, 243, 0.3);
-  background-size: 115%;
-  height: 50vh;
-  -webkit-animation-name: MOVE-BG;
-  -webkit-animation-duration: 10s;
-  -webkit-animation-timing-function: ease;
-  -webkit-animation-iteration-count: initial;
-}
+
 
 .navbar {
   z-index: 1;
@@ -98,9 +103,31 @@
 #univ-footer-img {
   padding: 10px 0 20px 0;
 }
+#univ-footer-img a {
+  display: inline;
+
+}
 #univ-footer-img img {
-  padding: 0px 15px;
+  padding: 15px 10px;
+  text-align: center;
 }
 #univ-footer-img img:first-child {
   padding-left: 0;
+}
+footer h5.text-uppercase {
+  padding: 5px 0;
+  border-bottom: 1px solid #ffffff;
+  margin-bottom: 10px;
+}
+.footer-menu ul {
+  padding: 0;
+}
+.footer-menu ul li {
+  list-style: none;
+}
+.footer-menu ul li a {
+  padding: 5px 0;
+}
+#footer-menu {
+  padding-bottom: 20px;
 }
