--- a/src/app/auth/account/account.component.html
+++ b/src/app/auth/account/account.component.html
@@ -5,7 +5,7 @@
       <div class="router-margin">
         <h1>Account</h1>
         <p>Name: {{ user.name }}</p>
-        <p>Email: {{ user.email }}</p>
+        <p>Login: {{ user.login }}</p>
       </div>
 
     </div>
