--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -75,11 +75,11 @@
 
 }
 #logo {
-  background-image: url("/assets/prz_logo.png");
-  background-position: center left; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: contain;
-  padding: 7px 0 7px 80px;
+  //background-image: url("/assets/prz_logo.png");
+  //background-position: center left; /* Center the image */
+  //background-repeat: no-repeat; /* Do not repeat the image */
+  //background-size: contain;
+  //padding: 7px 0 7px 80px;
   margin: 12px 0;
   //background-color: coral;
 }
