--- a/src/app/sites/panel/files/files.component.html
+++ b/src/app/sites/panel/files/files.component.html
@@ -1,3 +1,14 @@
-<p>
-  files works!
-</p>
+<div class="file-explorer-container">
+
+  <app-file-explorer
+    [fileElements]="fileElements | async" [path]="currentPath"
+    [canNavigateUp]="canNavigateUp"
+    (folderAdded)="addFolder($event)"
+    (elementRemoved)="removeElement($event)"
+    (navigatedDown)="navigateToFolder($event)"
+    (navigatedUp)="navigateUp()"
+    (elementRenamed)="renameElement($event)"
+    (elementMoved)="moveElement($event)">
+  </app-file-explorer>
+
+</div>
