--- a/src/app/sites/page-not-found/page-not-found.component.html
+++ b/src/app/sites/page-not-found/page-not-found.component.html
@@ -1,3 +1,7 @@
-<p>
-  page-not-found works!
-</p>
+<div class="container">
+  <div class="row text-center pt-5 pb-5">
+
+    <h1><mdb-badge color="red">404</mdb-badge> Nie znaleziono takiej strony!</h1>
+
+  </div>
+</div>
