--- a/src/app/sites/panel/files/file-explorer/modals/new-foler-dialog/new-foler-dialog.component.html
+++ b/src/app/sites/panel/files/file-explorer/modals/new-foler-dialog/new-foler-dialog.component.html
@@ -1,7 +1,8 @@
 <div class="modal-dialog modal-sm" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
+      <button type="button" class="close pull-right" aria-label="Close" >
+        <!--(click)="basicModal.hide()"-->
         <span aria-hidden="true">×</span>
       </button>
       <h4 class="modal-title w-100" id="myModalLabel">Create a new folder</h4>
@@ -10,7 +11,8 @@
       <input placeholder="Nazwa folderu" [(ngModel)]="folderName">
     </div>
     <div class="modal-footer">
-      <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Anuluj</button>
+      <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close"  mdbWavesEffect>Anuluj</button>
+      <!-- (click)="basicModal.hide()" -->
       <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect>Utwórz!</button>
     </div>
   </div>
