--- a/src/app/sites/panel/panel.component.html
+++ b/src/app/sites/panel/panel.component.html
@@ -1,4 +1,20 @@
-<div class="container-fluid">
+<div class="view view-page-header">
+  <div class="full-bg-img">
+    <div class="mask flex-center rgba-blue-strong"><!-- -->
+      <div class="container">
+        <div class="white-text wow fadeInRight" >
+
+          <h2 class="header-page">Panel administratora</h2>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="py-5 mt-3">
+
+  <div class="container">
   <div class="row">
     <div class="col-md-4 col-sm-12 col-xl-2">
       <!--<nav class="nav flex-column lighten-3 py-4 mb-r font-weight-bold z-depth-1">-->
@@ -25,5 +41,7 @@
       <router-outlet></router-outlet>
     </div>
   </div>
+</div>
+
 </div>
 
