--- a/src/app/sites/home/home.component.scss
+++ b/src/app/sites/home/home.component.scss
@@ -1,3 +1,138 @@
+.view-100vh {
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-attachment: fixed;
+  background-size: cover;
+}
+#home-1 {
+  background-color: #303f9f;
+  background-image: url("/assets/stefan-stefancik-297983-unsplash.jpg");
+  background-position: 50% 45%;
+}
+#home-technology {
+  background-color: #ffffff;
+  //background-image: url("/assets/StockSnap_URLDYQKROW.jpg");
+  //background-position: 50% 45%;
+}
+#home-technology .text {
+  color: rgba(0,0,0,0.95);
+}
+
+#home-2 {
+  background: linear-gradient(45deg, #45cafc, #303f9f) !important;
+  //background: linear-gradient(40deg,#2096ff,#05ffa3)!important
+  //background-color: #fdd835;
+  //background-image: url("/assets/manhattan-407703_1280.jpg");
+  //background-position: 50% 45%;
+}
+#home-2 .card {
+  height: 20vh;
+}
+#home-2 .card .rgba-blue-light {
+  -webkit-transition: background-color 0.25s; /* Safari */
+  transition: background-color 0.25s;
+
+}
+#home-2 .card .rgba-blue-light:hover {
+  background-color: rgba(33, 150, 243, 0.8);
+  -webkit-transition: background-color 0.25s; /* Safari */
+  transition: background-color 0.25s;
+
+}
+#home-2 .card-image {
+  background-size: cover;
+}
+#home-2 .card1 {background-image: url("/assets/home2/iot.jpg");}
+#home-2 .card2 {background-image: url("/assets/home2/cloud.jpg");}
+#home-2 .card3 {background-image: url("/assets/home2/mobile.jpg");}
+#home-2 .card4 {background-image: url("/assets/home2/embedded.jpg");}
+#home-2 .card5 {background-image: url("/assets/home2/web.jpg");}
+#home-2 .card6 {background-image: url("/assets/home2/spa.jpg");}
+#home-2 .card7 {background-image: url("/assets/home2/pwa.jpg");}
+#home-2 .card8 {background-image: url("/assets/home2/semantic.jpg");}
+
+#home-2 .card h3 {
+  font-size: 1.75em;
+}
+#home-2 .eng-text {
+  color: rgba(255,255,255,0.75);
+  font-size: 1em;
+}
+
+
+#home-3 {
+  background-color: rgba(33, 150, 243, 1);
+  background-image: url("/assets/alex-kotliarskyi-361081-unsplash.jpg");
+  background-position: 50% 45%;
+}
+#home-4 {
+  background-color: rgba(33, 150, 243, 1);
+  background-image: url("/assets/rawpixel-653764-unsplash.jpg");
+  background-position: 50% 45%;
+}
+#home-4 ul {
+  text-align: left;
+  padding: 1em 0;
+
+}
+#home-4 ul li {
+  list-style: none;
+  padding: 0.4em 0;
+  font-size: 1.25em;
+
+}
+#home-4 ul li i {
+  font-size: 1.5em;
+  padding-right: 0.75em;
+  width: 2em;
+}
+@-webkit-keyframes MOVE-IMG {
+  0% {
+    transform: translateX(-5vh);
+    opacity: 0;
+  }
+  10% {
+    transform: translateX(0vh);
+    opacity: 0.9;
+  }
+  90% {
+    transform: translateX(0vh);
+    opacity: 0.9;
+  }
+  100% {
+    transform: translateX(5vh);
+    opacity: 0;
+  }
+
+}
+
+#home-1 {
+
+}
+
+#home-1 .icon-slider {
+  transform: translateX(0vh);
+  //height: 25vh !important;
+  padding: 20vh 0 8vh 0;
+  opacity: 0;
+}
+#home-1 .icon-slider i {
+  font-size: 25vh;
+  //width: 25vh;
+}
+.animateLeftRight {
+  opacity: 0;
+  -webkit-animation-name: MOVE-IMG;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-timing-function: ease-in;
+  -webkit-animation-iteration-count: infinite;
+}
+.icon-slider i {
+  -webkit-transition: width 2s; /* Safari */
+  transition: width 2s;
+}
+
+
 mdb-card-body p {
   text-align: justify;
 }
@@ -11,14 +146,17 @@ mdb-card-body p {
 .testimonial-card .avatar {
   margin: 15px 0 0 0;
 }
+
 .dev-icon-list {
-  margin: 5px 0;
+  margin: 15px 0;
 }
 .dev-icon-list i {
-  color: #2196f3;
+  color: rgba(33, 150, 243, 1);
   font-size: 2em;
   padding: 0 4px;
 }
 .feature {
   //padding-bottom: 5rem !important;
 }
+
+
