--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,49 @@
 
 // regular style toast
 @import '~ngx-toastr/toastr.css';
+
+// ::-webkit-scrollbar the scrollbar.
+// ::-webkit-scrollbar-button the buttons on the scrollbar (arrows pointing upwards and downwards).
+// ::-webkit-scrollbar-thumb the draggable scrolling handle.
+// ::-webkit-scrollbar-track the track (progress bar) of the scrollbar.
+// ::-webkit-scrollbar-track-piece the track (progress bar) NOT covered by the handle.
+// ::-webkit-scrollbar-corner the bottom corner of the scrollbar, where both horizontal and vertical scrollbars meet.
+// ::-webkit-resizer the draggable resizing handle that appears at the bottom corner of some elements.
+
+.top-nav-collapse {
+  //background-color: #2196f3;
+  background: linear-gradient(45deg, #45cafc, #303f9f) !important;
+}
+
+.view-page-header {
+  // bg-img w #
+  //background-image: url("/assets/anders-jilden-478920-unsplash.jpg");
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  height: 25vh;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: rgba(33, 150, 243, 1);
+}
+.view-page-header .header-page {
+  padding-top: 6vh;
+}
+
+
+.view-page-100vh {
+  background-image: url("/assets/rawpixel-678089-unsplash.jpg");
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: rgba(33, 150, 243, 1);
+}
+.view-page-100vh .header-page {
+  padding: 3vh 0;
+}
+
+.view-auto {
+  height: auto;
+}
+
